kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wackops-backend-service
  namespace: wackops
spec:
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: backend
